Fixed some new layout issues and added functionality to the color selector with some temp product pics

--- a/fonts.css
+++ b/fonts.css
@@ -22,7 +22,7 @@
   font-style: normal;
 }
 
-.rubik-logo {
+.rubik-normal {
   font-family: "Rubik", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
@@ -41,4 +41,14 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+
+.ibm-plex-sans- {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
